MVP-7 (1/8): admin ↔ many communities + Super-Admin-as-admin + Super-Admin invite codes
- V22: admin_tenant mapping table (backfilled from app_user.current_tenant_id) +
  tenant.provider_onboarding_allowed flag.
- AdminTenant entity/repo + AdminDirectory helper; ADMIN_SEATS counting and admin
  notification/billing recipients now resolve via admin_tenant, not current_tenant_id
  (TicketService.notifyAdmins, SlaBreachJob, BillingService.recipientsFor,
  MeBillingController.usage, SuperAdminController quota).
- AuthService.resolveActiveTenant: single public source of truth; ADMIN resolves the
  active tenant from admin_tenant (falls back to oldest), SUPER_ADMIN carries a tenant
  while acting as admin. MeController.me drops its duplicate switch and calls it.
- POST /me/active-community generalised to RESIDENT|ADMIN|SUPER_ADMIN; new
  POST /me/stop-acting (SUPER_ADMIN → wildcard token). JwtAuthFilter scopes a
  SUPER_ADMIN with a tenant claim to that community instead of the wildcard.
- Admin controllers widened to hasAnyRole('ADMIN','SUPER_ADMIN'); TicketService admin
  transitions accept a tenant-scoped SUPER_ADMIN (requireAdminScope) and loadForActor
  grants full tenant visibility to SUPER_ADMIN.
- SuperAdminController: createAdmin attaches an existing admin instead of 409; new
  attach/detach/list admin endpoints; Super-Admin-issued invite codes
  (POST/GET/DELETE /superadmin/tenants/{id}/invite-codes via tenantScoped).
- me.memberships synthesises an ADMIN row per administered community.
- Tests: AdminMultiCommunityIT, SuperAdminAsAdminIT, SuperAdminInviteIT (6 new);
  IntegrationTestBase gains admin_tenant truncate + attachAdmin helper. 103/103.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>