@@ -8,12 +8,16 @@ import com.singlepoint.common.util.PhoneNumbers;
 import com.singlepoint.notification.DeviceTokenRepository;
 import com.singlepoint.notification.domain.DeviceToken;
 import com.singlepoint.security.AppPrincipal;
+import com.singlepoint.tenant.AdminTenantRepository;
 import com.singlepoint.tenant.TenantRepository;
+import com.singlepoint.tenant.domain.AdminTenant;
 import com.singlepoint.tenant.domain.Tenant;
+import com.singlepoint.tenant.domain.TenantStatus;
 import com.singlepoint.user.MembershipService;
 import com.singlepoint.user.UserService;
 import com.singlepoint.user.domain.AppUser;
 import com.singlepoint.user.domain.MembershipStatus;
+import com.singlepoint.user.domain.Role;
 import com.singlepoint.user.domain.UserTenantMembership;
 import org.springframework.security.access.prepost.PreAuthorize;
 import io.swagger.v3.oas.annotations.Operation;
@@ -38,15 +42,17 @@ public class MeController {
     private final UserService userService;
     private final MembershipService membershipService;
     private final TenantRepository tenantRepository;
+    private final AdminTenantRepository adminTenantRepository;
     private final DeviceTokenRepository deviceTokenRepository;
     private final AuthService authService;
 
     public MeController(UserService userService, MembershipService membershipService,
-                        TenantRepository tenantRepository, DeviceTokenRepository deviceTokenRepository,
-                        AuthService authService) {
+                        TenantRepository tenantRepository, AdminTenantRepository adminTenantRepository,
+                        DeviceTokenRepository deviceTokenRepository, AuthService authService) {
         this.userService = userService;
         this.membershipService = membershipService;
         this.tenantRepository = tenantRepository;
+        this.adminTenantRepository = adminTenantRepository;
         this.deviceTokenRepository = deviceTokenRepository;
         this.authService = authService;
     }
@@ -57,17 +63,19 @@ public class MeController {
     public ResponseEntity<MeDtos.MeResponse> me(@AuthenticationPrincipal AppPrincipal principal) {
         AppUser u = userService.require(principal.getUserId());
         List<UserTenantMembership> memberships = userService.memberships(u.getId());
-        Map<UUID, Tenant> tenants = tenantRepository.findAllById(
-                        memberships.stream().map(UserTenantMembership::getTenantId).collect(Collectors.toList()))
-                .stream().collect(Collectors.toMap(Tenant::getId, t -> t));
+        // An admin has no user_tenant_membership rows — its communities live in admin_tenant.
+        List<AdminTenant> adminLinks = u.getRole() == Role.ADMIN
+                ? adminTenantRepository.findByAdminUserIdAndActiveTrueOrderByCreatedAtAsc(u.getId())
+                : List.of();
 
-        // Residents get their active tenant from an ACTIVE membership; admins/providers from
-        // their assigned tenant. Matches AuthService's JWT tenant claim.
-        UUID activeTenant = switch (u.getRole()) {
-            case SUPER_ADMIN -> null;
-            case ADMIN, PROVIDER -> u.getCurrentTenantId();
-            case RESIDENT -> userService.resolveActiveTenant(u);
-        };
+        List<UUID> tenantIds = new java.util.ArrayList<>(
+                memberships.stream().map(UserTenantMembership::getTenantId).toList());
+        adminLinks.forEach(l -> tenantIds.add(l.getTenantId()));
+        Map<UUID, Tenant> tenants = tenantRepository.findAllById(tenantIds).stream()
+                .collect(Collectors.toMap(Tenant::getId, t -> t, (a, b) -> a));
+
+        // Single source of truth for the JWT tenant claim (see AuthService.resolveActiveTenant).
+        UUID activeTenant = authService.resolveActiveTenant(u);
         MeDtos.TenantBranding branding = null;
         boolean directServiceEnabled = false;
         if (activeTenant != null) {
@@ -80,12 +88,23 @@ public class MeController {
             }
         }
 
-        List<MeDtos.MembershipView> views = memberships.stream().map(m -> {
+        List<MeDtos.MembershipView> views = new java.util.ArrayList<>(memberships.stream().map(m -> {
             Tenant t = tenants.get(m.getTenantId());
             return new MeDtos.MembershipView(m.getTenantId(), t != null ? t.getName() : null,
                     m.getStatus().name(), m.getRelation().name(), m.getFlatId(), m.getRequestedFlatLabel(),
                     m.getHouseholdRole().name());
-        }).collect(Collectors.toList());
+        }).toList());
+        // Synthesise a membership row per administered community so the mobile switcher renders.
+        for (AdminTenant l : adminLinks) {
+            Tenant t = tenants.get(l.getTenantId());
+            views.add(new MeDtos.MembershipView(l.getTenantId(), t != null ? t.getName() : null,
+                    "ACTIVE", "ADMIN", null, null, "ADMIN"));
+        }
+        if (u.getRole() == Role.SUPER_ADMIN && activeTenant != null) {
+            Tenant t = tenants.computeIfAbsent(activeTenant, id -> tenantRepository.findById(id).orElse(null));
+            views.add(new MeDtos.MembershipView(activeTenant, t != null ? t.getName() : null,
+                    "ACTIVE", "ADMIN", null, null, "ADMIN"));
+        }
 
         return ResponseEntity.ok(new MeDtos.MeResponse(u.getId(), u.getRole().name(), u.getName(),
                 PhoneNumbers.mask(u.getPhone()), u.getEmail(), u.isProfileCompleted(), u.getPreferredTheme(),
@@ -93,18 +112,36 @@ public class MeController {
     }
 
     @PostMapping("/active-community")
-    @PreAuthorize("hasRole('RESIDENT')")
-    @Operation(summary = "Switch the active community; returns a session scoped to it")
+    @PreAuthorize("hasAnyRole('RESIDENT','ADMIN','SUPER_ADMIN')")
+    @Operation(summary = "Switch the active community; returns a session scoped to it. "
+            + "A Super Admin uses this to act as admin for an admin-less community.")
     @Transactional
     public ResponseEntity<AuthDtos.SessionResponse> switchCommunity(
             @AuthenticationPrincipal AppPrincipal principal, @Valid @RequestBody MeDtos.ActiveCommunityRequest body) {
         UUID tenantId = UUID.fromString(body.tenantId());
-        boolean member = userService.memberships(principal.getUserId()).stream()
-                .anyMatch(m -> m.getStatus() == MembershipStatus.ACTIVE && m.getTenantId().equals(tenantId));
-        if (!member) {
-            throw new AppException(ErrorCode.FORBIDDEN, "You don't have an active membership in that community");
+        boolean allowed = switch (principal.getRole()) {
+            case RESIDENT -> userService.memberships(principal.getUserId()).stream()
+                    .anyMatch(m -> m.getStatus() == MembershipStatus.ACTIVE && m.getTenantId().equals(tenantId));
+            case ADMIN -> adminTenantRepository
+                    .findByAdminUserIdAndTenantIdAndActiveTrue(principal.getUserId(), tenantId).isPresent();
+            case SUPER_ADMIN -> tenantRepository.findById(tenantId)
+                    .map(t -> t.getStatus() == TenantStatus.ACTIVE).orElse(false);
+            default -> false;
+        };
+        if (!allowed) {
+            throw new AppException(ErrorCode.FORBIDDEN, "You can't act for that community");
         }
         userService.setCurrentTenant(principal.getUserId(), tenantId);
+        return ResponseEntity.ok(AuthDtos.SessionResponse.from(
+                authService.refreshSessionFor(principal.getUserId())));
+    }
+
+    @PostMapping("/stop-acting")
+    @PreAuthorize("hasRole('SUPER_ADMIN')")
+    @Operation(summary = "Stop acting as admin; returns a platform-wide (cross-tenant) session")
+    @Transactional
+    public ResponseEntity<AuthDtos.SessionResponse> stopActing(@AuthenticationPrincipal AppPrincipal principal) {
+        userService.setCurrentTenant(principal.getUserId(), null);
         return ResponseEntity.ok(AuthDtos.SessionResponse.from(
                 authService.refreshSessionFor(principal.getUserId())));
     }
